# cetkaik_calculate_hand

./: Cargo.toml
src/: lib.rs
